--- a/assets/component-collection-hero.css
+++ b/assets/component-collection-hero.css
@@ -1,98 +1,99 @@
-.collection-hero__inner {
-  display: flex;
-  flex-direction: column;
-}
-
-.collection-hero--with-image .collection-hero__inner {
-  margin-bottom: 0;
-  padding-bottom: 2rem;
-}
-
-@media screen and (min-width: 750px) {
-  .collection-hero.collection-hero--with-image {
-    padding: calc(4rem + var(--page-width-margin)) 0 calc(4rem + var(--page-width-margin));
-    overflow: hidden;
-  }
-
-  .collection-hero--with-image .collection-hero__inner {
-    padding-bottom: 0;
-  }
-}
-
 .collection-hero__text-wrapper {
   flex-basis: 100%;
+  height: 18rem;
+  margin-top: calc(var(--header-height) + var(--announcement-bar-height));
+}
+
+.collection-hero__text-wrapper  h1 {
+  font-size: 12rem;
 }
 
 @media screen and (min-width: 750px) {
   .collection-hero {
     padding: 0;
   }
-
-  .collection-hero__inner {
-    align-items: center;
-    flex-direction: row;
-    padding-bottom: 0;
-  }
 }
 
 .collection-hero__title {
-  margin: 2.5rem 0;
+  margin: 5rem 0 0;
 }
 
-.collection-hero__title + .collection-hero__description {
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-  font-size: 1.6rem;
-  line-height: calc(1 + 0.5 / var(--font-body-scale));
+.collection-hero__dot {
+  width: 1.5rem;
+  height: 1.5rem;
+  background: rgba(var(--color-foreground));
+  border-radius: 1.5rem;
+  margin: 0 3rem;
 }
 
-@media screen and (min-width: 750px) {
-  .collection-hero__title + .collection-hero__description {
-    font-size: 1.8rem;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-  }
-
-  .collection-hero__description {
-    max-width: 66.67%;
-  }
-
-  .collection-hero--with-image .collection-hero__description {
-    max-width: 100%;
-  }
+.scroll-text {
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  display: inline-block;
 }
 
-.collection-hero--with-image .collection-hero__title {
+.scroll-text__scroll-wrapper {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  height: 100%;
+  white-space: nowrap;
+  margin: 0;
+
+  -moz-transform: translateX(100%);
+  -webkit-transform: translateX(100%);
+  transform: translateX(100%);
+  -moz-animation: scroll-left 10s linear infinite;
+  -webkit-animation: scroll-left 10s linear infinite;
+  animation: scroll-left 12s linear infinite;
+}
+
+.scroll-text__text-wrapper {
+  display: flex;
+  font-size: 100px;
+  align-items: center;
+}
+
+.scroll-text__text-wrapper h1 {
   margin: 0;
 }
 
-.collection-hero--with-image .collection-hero__text-wrapper {
-  padding: 5rem 0 4rem;
-}
+/* Move it (define the animation) */
+@-moz-keyframes scroll-left {
+  0% {
+    -moz-transform: translateX(100%);
+  }
 
-.collection-hero__image-container {
-  border: var(--media-border-width) solid rgba(var(--color-foreground), var(--media-border-opacity));
-  border-radius: var(--media-radius);
-  box-shadow: var(--media-shadow-horizontal-offset) var(--media-shadow-vertical-offset) var(--media-shadow-blur-radius)
-    rgba(var(--color-shadow), var(--media-shadow-opacity));
-}
-
-@media screen and (max-width: 749px) {
-  .collection-hero__image-container {
-    height: 20rem;
+  100% {
+    -moz-transform: translateX(-100%);
   }
 }
 
-@media screen and (min-width: 750px) {
-  .collection-hero--with-image .collection-hero__text-wrapper {
-    padding: 4rem 2rem 4rem 0;
-    flex-basis: 50%;
+@-webkit-keyframes scroll-left {
+  0% {
+    -webkit-transform: translateX(100%);
   }
 
-  .collection-hero__image-container {
-    align-self: stretch;
-    flex: 1 0 50%;
-    margin-left: 3rem;
-    min-height: 20rem;
+  100% {
+    -webkit-transform: translateX(-100%);
+  }
+}
+
+@keyframes scroll-left {
+  0% {
+    -moz-transform: translateX(100%);
+    /* Browser bug fix */
+    -webkit-transform: translateX(100%);
+    /* Browser bug fix */
+    transform: translate3d(0, 0, 0);
+  }
+
+  100% {
+    -moz-transform: translateX(-50%);
+    /* Browser bug fix */
+    -webkit-transform: translateX(-50%);
+    /* Browser bug fix */
+    transform: translate3d(-50%, 0, 0);
   }
 }
